# stochastic-poker-bankroll

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
src/pokerroll/: __init__.py
src/pokerroll/bridge/: __init__.py  stats.py
src/pokerroll/metrics/: __init__.py  risk.py
src/pokerroll/sim/: __init__.py  bankroll.py
src/pokerroll/ui/: __init__.py  app.py
tests/: __init__.py  test_bridge.py  test_metrics.py  test_sim.py
